proyectos/proyecto2/kubernetes/grpc-server/grpc_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-deployment
  namespace: p2-cluster
  labels:
    app: grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc
  template:
    metadata:
      labels:
        app: grpc
    spec:
      containers:
        - name: grpc-server
          image: carlosmz87/p2_grpc_server:latest
          ports:
            - containerPort: 3001
          resources:
            limits:
              cpu: "0.5"   # Límite de CPU
              memory: "512Mi"  # Límite de memoria RAM
            requests:
              cpu: "0.1"   # Solicitud de CPU
              memory: "256Mi"  # Solicitud de memoria RAM
        - name: grpc-client
          image: carlosmz87/p2_grpc_client:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.5"   # Límite de CPU
              memory: "512Mi"  # Límite de memoria RAM
            requests:
              cpu: "0.1"   # Solicitud de CPU
              memory: "256Mi"  # Solicitud de memoria RAM
