proyectos/proyecto2/kubernetes/grpc-server/grpc_service_client.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-service-client
  namespace: p2-cluster
  labels:
    app: grpc
spec:
  selector:
    app: grpc
  ports:
     - name: grpc-client-port
       protocol: TCP
       port: 3000
       targetPort: 3000
  type: LoadBalancer
