proyectos/proyecto2/kubernetes/grpc-server/grpc_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: p2-cluster
  labels:
    app: grpc
spec:
  rules:
    -  http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grpc-service-client
                port:
                  number: 3000
